# mozart-with-mcp-orchestra

./: CHANGELOG.md  README.md  pyproject.toml
.orchestra/: roadmap.md
.orchestra/adr/: ADR-000-the-score.md
.orchestra/work/core-converter/: gherkin-spec.md  prd.md  spec.md
src/currency_converter/: cli.py  converter.py  models.py  rates.py
tests/e2e/: test_cli.py
tests/integration/: test_converter_with_rates.py
tests/unit/: test_converter.py  test_models.py  test_rates.py
thoughts/shared/plans/: core-converter.flow.md  core-converter.md  core-converter.state.md
