[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "currency-converter"
version = "0.1.0"
requires-python = ">=3.12"

[project.scripts]
currency-converter = "currency_converter.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/currency_converter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]
